Edit directory configurations

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 __pycache__/*
 backup/*
-input_videos/*
-results_v1/*.mp4
-results_v1/*.png
+video_inputs/*
+results/**/*.mp4
+results/**/*.png
 yolov8x-pose.pt
 .DS_Store
